fix(admin): fix misaligned ellipsis in sponsored member creation dropdown menu
Added inline-block display property action-button in _styles.scss
Changed margin-left of action-button::after to properly align it.

--- a/apps/admin-gui/src/_styles.scss
+++ b/apps/admin-gui/src/_styles.scss
@@ -1581,8 +1581,13 @@ td.mat-mdc-cell {
   contain: size !important;
 }
 
+.action-button {
+  display: inline-block !important;
+}
+
 .action-button::after {
   content: '\2026';
+  margin-left: -4px;
 }
 
 .align-checkbox {
